Fix content being visible outside of popover body rounded corners

--- a/src/renderer/src/styles/layout/popover/index.sass
+++ b/src/renderer/src/styles/layout/popover/index.sass
@@ -16,6 +16,7 @@
     border-radius: 5px
     background: var(--color-popover-background)
     padding: 9px
+    overflow: hidden
     // TODO: Remove this. This kind of layout is now decided on per-page basis.
     // display: flex
     // flex-direction: column
